--- a/back-end/YouTune/appsettings.json
+++ b/back-end/YouTune/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=.\\SQLEXPRESS;Database=test_db;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=.\\SQLEXPRESS;Database=you_tune;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "Logging": {
         "LogLevel": {
