default connection strings

--- a/YT_BE/YouTune/appsettings.json
+++ b/YT_BE/YouTune/appsettings.json
@@ -1,6 +1,7 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=.\\SQLEXPRESS;Database=you_tune;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "WinDbConnection": "Server=.\\SQLEXPRESS;Database=you_tune;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "LinuxDbConnection": "Server=localhost;Database=you_tune;Trusted_Connection=False;MultipleActiveResultSets=true;user id=sa;password=Mashina1989"
     },
     "Logging": {
         "LogLevel": {
